--- a/GTAFake/Packages/manifest.json
+++ b/GTAFake/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.animation.rigging": "1.2.1",
     "com.unity.burst": "1.8.13",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.collections": "2.1.4",
